--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^5.0.3",
     "vite": "^4.2.1"
   },
   "scripts": {
